Name Added in Interpreter
Added my name in brainfuck_interpreter.html

Signed-off-by: abdalmoniem-alhifnawy <hifnawy_moniem@hotmail.com>

--- a/brainfuck_interpreter.html
+++ b/brainfuck_interpreter.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>brainfuck interpreter</title>
+    <title>Brainfuck Debugger & Interpreter</title>
 </head>
 
 <body>
@@ -33,7 +33,10 @@
         }
     </style>
     <textarea id="inp" style="position:fixed;left:-1000px"></textarea>
-    <div><h1>Brainfuck Debugger and Interpreter</h1></div>
+    <div>
+    	<h1>Brainfuck Debugger & Interpreter</h1>
+    	<h3>AbdAlMoniem AlHifnawy</h3>
+    </div>
     <fieldset style="float:right">
         <legend>Memory</legend><pre id="memory">00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 </pre></fieldset>
 
