--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 - - - 
 - - - 
                 </pre>
-                The interpreter I used to make the game: <a href="brainfuck_interpreter.html" target="_blank">Brainfuck Debugger and Interpreter</a>
+                The interpreter I used to make the game: <a href="brainfuck_interpreter.html" target="_blank">Brainfuck Debugger & Interpreter</a>
             </div>
         </div>        
         
