Tidying Up Interpreter
Tidying up brainfuck_interpreter.html

--- a/brainfuck_interpreter.html
+++ b/brainfuck_interpreter.html
@@ -38,7 +38,9 @@
     	<h3>AbdAlMoniem AlHifnawy</h3>
     </div>
     <fieldset style="float:right">
-        <legend>Memory</legend><pre id="memory">00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 </pre></fieldset>
+        <legend>Memory</legend>
+        <pre id="memory">00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 </pre>
+     </fieldset>
 
     <fieldset>
         <legend>Code</legend>
@@ -53,6 +55,7 @@
         <legend>Output</legend>
         <textarea id="output" style="width:100%;height:200px"></textarea>
     </fieldset>
+    
     <script>
         t = document.getElementById('t');
         memory = document.getElementById('memory');
